# mlds

./: .pylintrc  .style.yapf  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  setup_utils.py
mlds/: __init__.py  main.py  main_test.py  other.py  version.py
mlds/community/: __init__.py  export_community_datasets.py  export_community_datasets_test.py  external-datasets.toml
mlds/github_api/: __init__.py  github_api.py  github_api_test.py  test.py
mlds/my_dataset/: checksums.txt  my_dataset.py
mlds/my_dataset/data/: data.json
mlds/sub123/: __init__.py  a.py
mlds/uripath/: resource_path.py  uripath.py  uripath_test.py
