[tool.poetry]
name = "mlds-epot-test"
version = "0.1.0"
description = ""
license = "Apache-2.0"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.18.5"
epot-poetry-test = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
pytest-xdist = "^1.32.0"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
